First Compose implementation
- Using single activity (MainActivity) and composable screens only
- Implemented Navigation
- Changed theme and UI/design to a minimalist approach without bar
- Transparent system bars and drawing under them

Missing:

- Refactor UI architecture to better fit Compose paradigm
- States on MainActivity are not ok. No connection state is blank
- Improve UI with animations on scrolling and transition
to detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Wowpapers</string>
+
+    <string name="wallpaper_list_title">Wowpapers</string>
     <string name="wallpaper_list_empty">Wallpaper list empty</string>
     <string name="wallpaper_list_load_fail">Failed loading wallpapers. Please check your internet connection.</string>
 
